chore: seal work
Signed-off-by: Sam Gammon <sam@elide.ventures>